remove placeholder, add logo

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3375,6 +3375,11 @@ input, select, textarea {
 			opacity: 1;
 		}
 
+		#workdesc {
+			font-size: 1.5rem;
+			color: rgba(211, 211, 211, 0.753);
+		}
+
 /* Banner */
 
 	#banner {
@@ -3833,7 +3838,7 @@ input, select, textarea {
 				-webkit-flex-direction: row-reverse;
 				-ms-flex-direction: row-reverse;
 				flex-direction: row-reverse;
-				text-align: right;
+				text-align: left;
 			}
 
 			.wrapper.spotlight:nth-child(2n - 1) .image {
